--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ dist: trusty
 osx_image: xcode9.2
 script:
   - swift build
-  - xcodebuild -scheme OpenAPI-SwiftTests test
+  - xcodebuild -scheme KKBOXOpenAPISwiftTests test
 notifications:
   email:
     on_success: never
