--- a/KKBOXOpenAPISwift.xcodeproj/xcshareddata/xcschemes/xcschememanagement.plist
+++ b/KKBOXOpenAPISwift.xcodeproj/xcshareddata/xcschemes/xcschememanagement.plist
@@ -3,7 +3,7 @@
 <dict>
   <key>SchemeUserState</key>
   <dict>
-    <key>OpenAPI-Swift-Package.xcscheme</key>
+    <key>KKBOXOpenAPISwift-Package.xcscheme</key>
     <dict></dict>
   </dict>
   <key>SuppressBuildableAutocreation</key>
