--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: swift
 sudo: required
 dist: trusty
-osx_image: xcode9.2
+osx_image: xcode9.3
 script:
   - swift build
-  - xcodebuild -scheme KKBOXOpenAPISwiftTests test
+  - swift test
 notifications:
   email:
     on_success: never
