--- a/KKBOXOpenAPISwift.xcodeproj/xcshareddata/xcschemes/KKBOXOpenAPISwiftTests.xcscheme
+++ b/KKBOXOpenAPISwift.xcodeproj/xcshareddata/xcschemes/KKBOXOpenAPISwiftTests.xcscheme
@@ -5,6 +5,19 @@
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
+      <BuildActionEntries>
+         <BuildActionEntry
+            buildForRunning = "YES"
+            buildForTesting = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "KKBOXOpenAPISwift::KKBOXOpenAPISwiftTests"
+               BuildableName = "KKBOXOpenAPISwiftTests.xctest"
+               BlueprintName = "KKBOXOpenAPISwiftTests"
+               ReferencedContainer = "container:KKBOXOpenAPISwift.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+      </BuildActionEntries>
    </BuildAction>
    <TestAction
       buildConfiguration = "Debug"
