--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: swift
 sudo: required
 dist: trusty
-osx_image: xcode9.3
+osx_image: xcode10.1
 script:
-  - swift build
-  - swift test
+  - swift package generate-xcodeproj
+  - xcodebuild test -scheme KKBOXOpenAPISwift-Package -enableCodeCoverage YES
+  - xcov --scheme KKBOXOpenAPISwift-Package
 notifications:
   email:
     on_success: never
