Updates CI settings.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: swift
 sudo: required
 dist: trusty
 osx_image: xcode10.1
+before_install:
+  - gem install xcov
+  - gem install fastlane
 script:
   - swift package generate-xcodeproj
   - xcodebuild test -scheme KKBOXOpenAPISwift-Package -enableCodeCoverage YES
