--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,16 @@ language: swift
 sudo: required
 dist: trusty
 osx_image: xcode11
+
+matrix:
+  include:
+    - os: osx
+      osx_image: xcode11
+    - os: osx
+      osx_image: xcode10.3
+    - os: osx
+      osx_image: xcode10.1
+
 before_install:
   - gem install xcov
   - gem update fastlane
