Updates CI settings.

--- a/.github/workflows/jazzy.yml
+++ b/.github/workflows/jazzy.yml
@@ -22,7 +22,7 @@ jobs:
           git init
           git config user.name  "CI"
           git config user.email "jazzy-ci@github.com"
-          git remote add secure-origin https://${{ secrets.ACCESS_TOKEN }}@github.com/KKBOX/OpenAPI-ObjectiveC.git
+          git remote add secure-origin https://${{ secrets.ACCESS_TOKEN }}@github.com/KKBOX/OpenAPI-Swift.git
           git checkout -b gh-pages
           git add .
           git commit -m "Updated docs"
